# engineering_agents

./: .gitignore  AGENTS.md  LICENSE.txt  README.md  config.yaml  mkdocs.yml  ollama_client.py  pyproject.toml  simulation.py  visualization.py
.cursor/agents/: codebase-explorer.md  debugger.md
.cursor/plans/: README.md  cli_v3_plan.md  cli_v3_ssos_container.plan.md  unified_simulation_cli.plan.md
.github/workflows/: ssos-e2e.yml
docs/: MAINTENANCE.md  README.md  api-contracts.md  architecture.md  catalog.md  development-plan.md  index.md  one-piece-integration.md  scenario-scrubber-degradation.md
docs/en/: AGENTS.md  README.md  api-contracts.md  architecture.md  cli.md  development-plan.md  one-piece-integration.md  scenario-scrubber-degradation.md  scenario-ssos-eclss-loop.md
docs/images/: README.md
docs/ja/: AGENTS.md  README.md  api-contracts.md  architecture.md  cli.md  development-plan.md  one-piece-integration.md  scenario-scrubber-degradation.md  scenario-ssos-eclss-loop.md
docs/ssos/: eps-integration.md  index.md  roadmap.md  troubleshooting.md
en/: AGENTS.md  README.md
ja/: AGENTS.md  README.md
memo/: backlog.md  eps_implementation_plan.md  homogeneous_agent_team_plan.md  mvp_plan.md  persona_llm_core_oop_plan.md  persona_workshop_draft.md  ssos_eps_physical_phenomena_overview.md
scripts/: run_graph_rewire_e2e.sh  run_ssos_eclss_1b_smoke.sh  run_ssos_eclss_2_smoke.sh  run_ssos_eclss_loop.sh  run_ssos_eclss_smoke.sh  run_ssos_eps_smoke.sh  run_ssos_regression.sh  ssos_container_run.sh  ssos_eclss_headless.sh  ssos_host_run.sh
(+233 files in other folders)
